:star: Migrate pages

--- a/src/assets/sass/common.sass
+++ b/src/assets/sass/common.sass
@@ -26,3 +26,12 @@
   display: flex
   flex-direction: column
   justify-content: center
+
+.toolbar
+  padding: 0.5rem 0
+  background-color: $light
+  border-bottom: 1px solid rgba(0,0,0,0.05)
+  +touch
+    padding: 0.5rem 1.5rem
+  .level
+    min-height: 2.25em
