:star: Render poster's votes in ShowPoster.vue

--- a/src/assets/sass/shared.sass
+++ b/src/assets/sass/shared.sass
@@ -2,7 +2,7 @@
 
 $primary: #465775
 $link: #59c9a4
-$info: #5c6c5e
+$info: #d89a9e
 $danger: #ef6f6c
 $body-family: Lato, sans-serif
 $family-monospace: 'SF Mono', Consolas, 'Liberation Mono', Menlo, Courier, monospace
