:art: Tweak style

--- a/src/assets/sass/common.sass
+++ b/src/assets/sass/common.sass
@@ -8,7 +8,7 @@
 // A pretty-ish placeholder image
 .image.placeholder
   background: $white-ter
-  border-radius: $radius-large
+  border-radius: $radius-rounded
   box-shadow: 0 0 6px $grey-lighter
   
   span
