:star: Add warning when no posters

--- a/src/assets/sass/styles.sass
+++ b/src/assets/sass/styles.sass
@@ -8,7 +8,7 @@
 // A pretty-ish placeholder image
 .image.placeholder
   background: $white-ter
-  border-radius: $radius-rounded
+  border-radius: $radius-large
   box-shadow: 0 0 6px $grey-lighter
   
   span
