--- a/src/assets/sass/styles.sass
+++ b/src/assets/sass/styles.sass
@@ -35,3 +35,11 @@
     padding: 0.5rem 1.5rem
   .level
     min-height: 2.25em
+
+.page
+  display: flex
+  flex-direction: column
+  min-height: 100vh
+  
+  .page-expand
+    flex: 1
